support enums in mariadb